# FinalProject

./: .gitignore  FinalProject.ipynb  alzheimer_cnn.ipynb  pyproject.toml
.ipynb_checkpoints/: FinalProject-checkpoint.ipynb
Downloads/: alzheimers-metadata.csv
output/20260416-230214/: log.txt
output/20260416-230330/: last.ckpt  log.txt
output/20260416-231156/: log.txt
output/20260416-231231/: last.ckpt  log.txt
output/20260416-231954/: log.txt
output/20260416-232159/: last.ckpt  log.txt
output/20260419-161658/: last.ckpt  log.txt
output/20260419-171109/: last.ckpt  log.txt
output/20260419-180022/: last.ckpt  log.txt
output/20260419-185420/: log.txt
output/20260419-190449/: last.ckpt  log.txt
output/20260419-194043/: last.ckpt  log.txt
output/20260419-200810/: last.ckpt  log.txt
output/20260419-223844/: last.ckpt  log.txt
output/20260420-135030/: last.ckpt  log.txt
output/20260420-141629/: last.ckpt  log.txt
output/20260420-174505/: last.ckpt  log.txt
output/20260420-180212/: log.txt
output/20260420-180305/: last.ckpt  log.txt
output/20260420-181658/: last.ckpt  log.txt
output/20260420-192933/: last.ckpt  log.txt
output/20260421-160118/: last.ckpt
output/20260421-172819/: last.ckpt
output/20260421-173012/: last.ckpt
