[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["joeyxsalazar <salazarxjoey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyhealth = "^2.0.1"
datasets = "^4.8.4"
torch = ">=2.7.1,<2.8.0"
torchvision = ">=0.22.0,<0.23.0"
distributed = ">=2025.11.0,<2025.12.0"
jupyterlab = "^4.5.6"
notebook = "^7.5.5"
ipywidgets = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
